Removed random comments

--- a/Forum/Views/Question/Delete.cshtml
+++ b/Forum/Views/Question/Delete.cshtml
@@ -1,5 +1,9 @@
 @model Forum.Models.Question
 
+@{
+    ViewData["Title"] = "Delete";
+}
+
 <h1>Delete Question</h1>
 
 <h3>Are you sure you want to delete this?</h3>
