added edit and delte buttons edit works fine but delte is giving 400 error after hitting ok

--- a/Forum/Views/Question/Delete.cshtml
+++ b/Forum/Views/Question/Delete.cshtml
@@ -17,7 +17,9 @@
         <dd class="col-sm-10">@Model.Description</dd>
     </dl>
 </div>
-<form asp-action="DeleteConfirmed">
+
+<!-- Delete form with POST method -->
+<form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" asp-for="Id" />
     <button type="submit" class="btn btn-danger">Delete</button> |
     <a asp-action="Index">Back to List</a>
