--- a/Forum/Views/Shared/_LoginPartial.cshtml
+++ b/Forum/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,31 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Forum.Models
+@using Forum.Data
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@inject Forum.Data.ApplicationDbContext ApplicationDbContext
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
+        <!-- User is signed in -->
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-dark" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <form asp-controller="Profile" asp-action="Logout" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
     }
     else
     {
+        <!-- User is not signed in -->
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-dark" asp-controller="Profile" asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-dark" asp-controller="Profile" asp-action="Login">Login</a>
         </li>
     }
 </ul>
