--- a/Forum/Views/Shared/_LoginPartial.cshtml
+++ b/Forum/Views/Shared/_LoginPartial.cshtml
@@ -1,30 +1,39 @@
-﻿@using Microsoft.AspNetCore.Http
-@using Forum.Models
-@inject IHttpContextAccessor HttpContextAccessor
+﻿@model Forum.Models.Question
 
-<ul class="navbar-nav">
-    @if (HttpContextAccessor.HttpContext.Session.GetString("UserEmail") != null)
-    {
-        <!-- User is signed in -->
-        <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage">
-                Hello @HttpContextAccessor.HttpContext.Session.GetString("UserEmail")!
-            </a>
-        </li>
-        <li class="nav-item">
-            <form asp-controller="Profile" asp-action="Logout" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
-    }
-    else
-    {
-        <!-- User is not signed in -->
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Profile" asp-action="Register">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Profile" asp-action="Login">Login</a>
-        </li>
-    }
-</ul>
+@{
+    ViewData["Title"] = "Create";
+}
+
+<h1>Create</h1>
+<h4>Question</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <!-- Removed IdentityUserId field since it is no longer needed -->
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts
+{
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
